login menu show/hide, alignment fix

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -49,7 +49,7 @@ header .separator {
 
 #login {
     position: absolute;
-    right: 70px;
+    right: 60px;
     top: 70px;
     padding: 10px;
 }
